--- a/SASS/__buttons.scss
+++ b/SASS/__buttons.scss
@@ -13,6 +13,18 @@
     cursor: pointer;
 }
 
+.btn-small {
+    line-height: 1;
+    font-size: 10px;
+    padding: 5px 10px;
+}
+
+.btn-large {
+    line-height: 2;
+    font-size: 20px;
+    padding: 5px 20px;
+}
+
 @each $key, $color in $theme-colors {
     .btn-#{$key} {
         @if $key == "light" or $key == "warning" or $key == "info" {
