Added colors for text and background

--- a/SASS/__variables.scss
+++ b/SASS/__variables.scss
@@ -111,7 +111,9 @@ $theme-colors: map-merge(
     "warning":    $warning,
     "danger":     $danger,
     "light":      $light,
-    "dark":       $dark
+    "dark":       $dark,
+    "muted":      $gray-600,
+    "error":      $red,
   ),
   $theme-colors
 );
