--- a/SASS/__variables.scss
+++ b/SASS/__variables.scss
@@ -117,3 +117,19 @@ $theme-colors: map-merge(
   ),
   $theme-colors
 );
+
+$small:   "(max-width: 576px)";
+$medium:  "(min-width: 768px) and (max-width: 992px)";
+$large:   "(min-width: 992px) and (max-width: 1200px)";
+$xlarge:  "(min-width: 1200px)";
+
+$device-size: () !default;
+$device-size: map-merge(
+  (
+  "sm": $small,
+  "md": $medium,
+  "lg": $large,
+  "xl" :$xlarge
+),
+  $device-size
+);
