--- a/SASS/__images.scss
+++ b/SASS/__images.scss
@@ -5,12 +5,12 @@
 
 .img-thumbnail {
     border: solid $gray-600 1px;
-    border-radius: 1px;
+    border-radius: 5%;
     padding: 2px;
 }
 
 .img-rounded {
-    border-radius: 3px;
+    border-radius: 15%;
 }
 
 .img-circle {
