--- a/SASS/__variables.scss
+++ b/SASS/__variables.scss
@@ -118,7 +118,7 @@ $theme-colors: map-merge(
   $theme-colors
 );
 
-$small:   "(max-width: 576px)";
+$small:   "(min-width: 576px) and (max-width: 768px)";
 $medium:  "(min-width: 768px) and (max-width: 992px)";
 $large:   "(min-width: 992px) and (max-width: 1200px)";
 $xlarge:  "(min-width: 1200px)";
