--- a/SASS/__visibility.scss
+++ b/SASS/__visibility.scss
@@ -1,3 +1,11 @@
+.visible {
+    visibility: visible;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
 @each $key, $size in $device-size {
     @media #{$size} {
         .visible-#{$key} {
