--- a/SASS/framework.css
+++ b/SASS/framework.css
@@ -1239,60 +1239,136 @@
   background: #99caff;
   color: #004a99;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-secondary {
   background: #bcc1c6;
   color: #3d4246;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-success {
   background: #86e29b;
   color: #145523;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-info {
   background: #7adeee;
   color: #0c525d;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-warning {
   background: #ffe7a0;
   color: #a07800;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-danger {
   background: #f3b7bd;
   color: #921925;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-light {
   background: white;
   color: #bdc6d0;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-dark {
   background: #7a8793;
   color: #060708;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-muted {
   background: #bcc1c6;
   color: #3d4246;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .alert-error {
   background: #f3b7bd;
   color: #921925;
   font-size: 20px;
+  padding: 15px;
+  margin: 5px 0;
+  border-radius: 10px;
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.close {
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .visible {
@@ -1358,5 +1434,12 @@
   .hidden-print {
     visibility: hidden !important;
   }
+}
+
+* {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 /*# sourceMappingURL=framework.css.map */
