--- a/style/style.css
+++ b/style/style.css
@@ -17,3 +17,12 @@ button {
 h4 {
     margin: 10px 0 45px 0;
 }
+
+h2 {
+    padding: 20px;
+    text-decoration: underline;
+}
+
+h3 {
+    padding: 10px;
+}
