--- a/SASS/__alerts.scss
+++ b/SASS/__alerts.scss
@@ -6,8 +6,8 @@
       padding: 15px;
       margin: 5px 0;
       border-radius: 10px;
-      -webkit-animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	    animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+      -webkit-animation: fade-in 5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	    animation: fade-in 5s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
     }
 }
 
@@ -15,16 +15,22 @@
     0% {
       opacity: 0;
     }
-    100% {
+    50% {
       opacity: 1;
+    }
+    100% {
+      opacity: 0;
     }
   }
 @keyframes fade-in {
   0% {
     opacity: 0;
   }
-  100% {
+  50% {
     opacity: 1;
+  }
+  100% {
+    opacity: 0;
   }
 }
 
